[metadata]
# replace with your username:
name = abc-sphinx-extensions
version = 1.0
author = Tim Pillinger
description = Convert abcfiles to svg for use in sphinxdocs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: GPL3
    Operating System :: OS Independent

python_requires = >=3.7
